<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:background="@drawable/item_editor_bg">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:text="@string/action_options"
            android:textStyle="bold"
            android:id="@+id/table_action_desc"
            android:textColor="@android:color/white"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="15dp">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <hyi.mobilepos.widget.PhonicButton
                    android:id="@+id/btn_open_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BigActionButtonStyle"
                    android:text="@string/take_order"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
            <hyi.mobilepos.widget.PhonicButton
                    android:id="@+id/btn_change_customer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="170dp"
                    style="@style/BigActionButtonStyle"
                    android:text="@string/change_customer_count"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
            <hyi.mobilepos.widget.PhonicButton
                    android:id="@+id/btn_change_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BigActionButtonStyle"
                    android:text="@string/change_table"
                    />
        </TableRow>
    </TableLayout>
</LinearLayout>