<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:background="@drawable/time_limit_job_bg">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextViewStyle"
            android:text="@string/order_number"
            android:textColor="@android:color/white"/>
    <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallTextViewStyle"
            android:text="123454"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="15dp">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <hyi.mobilepos.widget.PhonicButton
                    android:id="@+id/btn_transaction_reprint_receipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BigActionButtonStyle"
                    android:text="@string/reprint_receipt"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="15dp">
            <hyi.mobilepos.widget.PhonicButton
                    android:id="@+id/btn_whole_transaction_refund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="170dp"
                    style="@style/BigActionButtonStyle"
                    android:text="@string/whole_transaction_refund"
                    />
        </TableRow>
    </TableLayout>
</LinearLayout>