<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/window_background"
        >
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_sysno_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/pref_title_device_id"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
            />
            <EditText
                    android:id="@+id/settings_sysno_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    android:singleLine="true"
                    style="@style/AppEditTextStyle"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_forgno_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/pref_title_store_id"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
                    />
            <EditText
                    android:id="@+id/settings_forgno_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    android:singleLine="true"
                    style="@style/AppEditTextStyle"
                    />
        </LinearLayout>
        <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_sysflag_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/是否主机"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
            />
            <Switch
                    android:id="@+id/settings_sysflag_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOn="ON"
                    android:textOff="OFF"
            />
        </LinearLayout>-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_serverip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/pref_title_server_ip_addr"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
            />
            <EditText
                    android:id="@+id/settings_serverip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    android:singleLine="true"
                    style="@style/AppEditTextStyle"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_serverport_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/SC授权端口"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
            />
            <EditText
                    android:id="@+id/settings_serverport_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:singleLine="true"
                    style="@style/AppEditTextStyle"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_shouquanip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/服务器Ip地址"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
            />
            <EditText
                    android:id="@+id/settings_shouquanip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    android:singleLine="true"
                    style="@style/AppEditTextStyle"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_shouquanport_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/服务器端口"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
            />
            <EditText
                    android:id="@+id/settings_shouquanport_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:singleLine="true"
                    style="@style/AppEditTextStyle"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_sysid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/设备唯一号"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
                    />
            <TextView
                    android:id="@+id/settings_sysid_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:ems="10"
                    style="@style/LargeTextViewStyle"
                    />
        </LinearLayout>
        <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/settings_auto_upload_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edittext_text_color"
                    android:text="@string/自动数据上传"
                    android:ems="5"
                    style="@style/LargeTextViewStyle"
                    />
            <Switch
                    android:id="@+id/settings_auto_upload_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:showText="true"
                    android:textOn="ON"
                    android:textOff="OFF"
                    />
        </LinearLayout>-->
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <hyi.mobilepos.widget.PhonicButton
                android:id="@+id/settings_regist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/ic_button_apple_white"
                app:buttonColor="@color/my_button_color"
                android:ems="5"
                android:text="@string/申请"
                style="@style/LargeTextViewStyle"
        />
        <hyi.mobilepos.widget.PhonicButton
                android:id="@+id/settings_impower_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/ic_button_apple_white"
                app:buttonColor="@color/my_button_color"
                android:ems="5"
                android:text="@string/授权"
                style="@style/LargeTextViewStyle"
        />
    </LinearLayout>


</LinearLayout>